--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     .tile:hover{transform:translateY(-2px);border-color:#3a3a3a;filter:brightness(1.02)}
     .tile[draggable="true"]{cursor:grab}
     .tile.dragging{opacity:.8;cursor:grabbing;outline:2px dashed #3a3a3a}
-    .tile .bg{position:absolute;inset:0;background:#111;background-size:cover;background-position:center}
+    .tile .bg{position:absolute;inset:0;background:#111;background-size:contain;background-position:center}
     .tile .content{position:absolute;inset:0;padding:14px;display:flex;flex-direction:column;justify-content:flex-end}
     .titleText{font-weight:700;font-size:16px;line-height:1.2;word-break:break-word;text-shadow:0 1px 0 rgba(0,0,0,.35)}
     .titleText.hidden{display:none}
