--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Stu</title>
-  <meta name="description" content="Single‑file link board: add links, edit tile color or background image, drag to reorder, and tweak general preferences. All saved locally.">
+  <title>Stuart</title>
+  <meta name="description" content="Your new favorite Start Page: add links, edit tile color or background image, drag, and tweak. All saved locally.">
   <style>
     :root{
       --bg:#000000;           /* app background */
