--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Stu</title>
-  <meta name="description" content="Start Page: add links, live edit tiles, drag to reorder, and tweak preferences. All saved locally.">
+  <meta name="description" content="Start Page: add links, live edit tiles, drag to reorder, and tweak grouped preferences. All saved locally.">
   <style>
     :root{
       --bg:#000000;           /* app background */
@@ -25,8 +25,8 @@
     .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(var(--tile-min),1fr));gap:12px;padding:18px}
 
     /* Tile */
-    .tile.web-link{position:relative;aspect-ratio:1/1;border-radius:var(--radius);overflow:hidden;border:none;background:#0c0c0c;text-decoration:none;color:inherit;transition:transform .12s ease,border-color .12s ease,filter .12s ease}
-    .tile:hover{transform:translateY(-2px);border-color:#3a3a3a;filter:brightness(1.02)}
+    .tile.web-link{position:relative;aspect-ratio:1/1;border-radius:var(--radius);overflow:hidden;border:none;background:#0c0c0c;text-decoration:none;color:inherit;transition:transform .12s ease,filter .12s ease}
+    .tile:hover{transform:translateY(-2px);filter:brightness(1.02)}
     .tile[draggable="true"]{cursor:grab}
     .tile.dragging{opacity:.85;cursor:grabbing;outline:2px dashed #3a3a3a}
     .tile .bg{position:absolute;inset:0;background:#111;background-size:cover;background-position:center}
@@ -45,12 +45,12 @@
     .empty{color:var(--muted);text-align:center;padding:40px 18px}
 
     /* Floating buttons */
-    .fab{position:fixed;right:22px;z-index:10;width:56px;height:56px;border-radius:var(--radius);border:1px solid var(--ring);background:#0a0a0a;color:#fff;display:grid;place-items:center;font-size:26px;line-height:0;cursor:pointer}
+    .fab{position:fixed;right:22px;z-index:10;width:56px;height:56px;border-radius:var(--radius);border:none;background:transparent;color:#fff;display:grid;place-items:center;font-size:26px;line-height:0;cursor:pointer}
     #fab{bottom:22px}
     #prefsBtn{bottom:90px;font-size:20px}
 
     /* Sheets (composer & prefs) */
-    .sheet{position:fixed;right:22px;z-index:10;width:min(560px,calc(100vw - 44px));background:var(--panel);border:1px solid var(--ring);border-radius:var(--radius);padding:12px;opacity:0;visibility:hidden;transform:scale(.98);transition:opacity .14s ease,transform .14s ease,visibility .14s ease}
+    .sheet{position:fixed;right:22px;z-index:10;max-width:220px;width:min(560px,calc(100vw - 44px));background:var(--panel);border:1px solid var(--ring);border-radius:var(--radius);padding:12px;opacity:0;visibility:hidden;transform:scale(.98);transition:opacity .14s ease,transform .14s ease,visibility .14s ease}
     .sheet.open{opacity:1;visibility:visible;transform:scale(1)}
     #composer{bottom:90px}
     #prefs{bottom:160px}
@@ -68,14 +68,21 @@
     .editor .group{display:flex;align-items:center;gap:6px;background:transparent;border:none;padding:0;flex-wrap:wrap}
     .editor input[type=file]{display:block}
 
-    /* Preferences: vertical label stacking restored */
-    #prefsForm{display:flex;flex-direction:column;gap:12px}
-    details{border:1px solid var(--ring);border-radius:12px;background:#0c0c0c}
-    summary{list-style:none;cursor:pointer;padding:10px 12px;display:flex;align-items:center;gap:10px;font-weight:700}
+    /* Preferences — vertical labels + accordion styling per spec */
+    #prefsForm{display:flex;flex-direction:column;gap:7px}
+    #prefsForm > details{background:#0c0c0c}
+    #prefsForm > details:not(:last-of-type){border-bottom:2px solid var(--ring)}
+    summary{list-style:none;cursor:pointer;padding:.75rem;display:flex;align-items:center;gap:10px;font-weight:700}
     summary::-webkit-details-marker{display:none}
+    /* + / – icons */
+    details > summary::before{content:"+";display:inline-block;width:1em;text-align:center;margin-right:2px}
+    details[open] > summary::before{content:"–"}
+
     .group-body{padding:12px;display:flex;flex-direction:column;gap:1rem}
     .field{display:flex;flex-direction:column;gap:6px}
     .field > label{font-size:12px;color:#bbb}
+
+    /* Toggle */
     .toggle{position:relative;display:inline-flex;align-items:center;width:44px;height:26px;border-radius:999px;border:1px solid var(--ring);background:#1a1a1a;cursor:pointer}
     .toggle input{position:absolute;opacity:0;width:0;height:0}
     .toggle .track{position:absolute;inset:0;border-radius:999px}
@@ -88,7 +95,6 @@
     body.locked .tile[draggable="true"]{cursor:default}
     body.locked .tile.dragging{opacity:1; outline:none}
 
-    @media(max-width:520px){.grid{grid-auto-flow:column;grid-auto-columns:80%;overflow-x:auto;grid-template-columns:repeat(4,80vw)}}
     /* Under 320px: stack grid vertically */
     @media(max-width:320px){.grid{grid-auto-flow:row;grid-auto-columns:initial;overflow-x:visible;grid-template-columns:1fr}}
   </style>
@@ -111,7 +117,7 @@
     </form>
   </div>
 
-  <!-- Preferences sheet (grouped + vertical labels) -->
+  <!-- Preferences sheet (grouped + vertical labels + accordion) -->
   <div id="prefs" class="sheet" role="dialog" aria-modal="true">
     <form id="prefsForm" autocomplete="off">
 
@@ -131,6 +137,7 @@
           </div>
           <div class="field">
             <label for="optBgFile">Background Image</label>
+            <!-- Visible native file input here (as requested) -->
             <input id="optBgFile" type="file" accept="image/*" />
           </div>
         </div>
@@ -168,14 +175,14 @@
       <details id="grpExport">
         <summary>Export / Import</summary>
         <div class="group-body">
-          <div class="field">
-            <label>Export Settings</label>
-            <button id="exportBtn" class="btn" type="button">Export</button>
-          </div>
-          <div class="field">
-            <label for="importFile">Import Settings</label>
-            <input id="importFile" type="file" accept="application/json" />
-            <button id="importBtn" class="btn" type="button">Import</button>
+          <div class="field" style="gap:8px">
+            <label class="sr-only" for="importFile" hidden>Import file</label>
+            <!-- Hide native file input; use buttons only here -->
+            <input id="importFile" type="file" accept="application/json" style="display:none" />
+            <div style="display:flex;gap:8px;flex-wrap:wrap">
+              <button id="exportBtn" class="btn" type="button">Export Settings</button>
+              <button id="importBtn" class="btn" type="button">Import Settings</button>
+            </div>
           </div>
         </div>
       </details>
@@ -301,8 +308,18 @@
       items.unshift(it); save(); render(); form.reset(); toggleSheet(composer,false); fab.textContent='＋';
     });
 
-    // —— Preferences ——
+    // —— Drag reorder (grid-level handlers) ——
+    const gridEl = grid; // alias for listeners below
+    gridEl.addEventListener('dragover', (e)=>{ if(prefs.lock) return; e.preventDefault(); });
+    gridEl.addEventListener('drop', (e)=>{
+      if(prefs.lock) return; e.preventDefault(); const fromId = e.dataTransfer.getData('text/plain'); const toTile = e.target.closest('.tile'); if(!fromId || !toTile) return; const toId = toTile.dataset.id; if(!toId || fromId===toId) return;
+      const fromIdx = items.findIndex(x=>x.id===fromId); const toIdx = items.findIndex(x=>x.id===toId);
+      if(fromIdx<0 || toIdx<0) return; const [moved] = items.splice(fromIdx,1); items.splice(toIdx,0,moved); save(); render();
+    });
+
+    // —— Preferences (accordion + groups) ——
     const prefsBtn=$('#prefsBtn'); const prefsSheet=$('#prefs');
+    const optLock=$('#optLock');
     const optShowTitles=$('#optShowTitles');
     const optBgColor=$('#optBgColor'); const optBgFile=$('#optBgFile');
     const optTileWidth=$('#optTileWidth'); const optTitleSize=$('#optTitleSize'); const optRadius=$('#optRadius');
@@ -324,6 +341,7 @@
     }
 
     prefsBtn.addEventListener('click', ()=>{ const open = toggleSheet(prefsSheet); prefsBtn.setAttribute('aria-expanded', String(open)); if(open){
+      optLock.checked=!!prefs.lock;
       optShowTitles.checked = !prefs.hideTitles;
       optBgColor.value=prefs.bg || '#000000';
       optTileWidth.value=String(prefs.tileMin||160);
@@ -344,7 +362,16 @@
       }
     });
 
+    // Accordion behaviour: open one, close others
+    const accordions = $$('#prefsForm > details');
+    accordions.forEach(d => {
+      d.addEventListener('toggle', ()=>{
+        if(d.open){ accordions.forEach(other => { if(other!==d) other.open=false; }); }
+      });
+    });
+
     // General
+    optLock.addEventListener('change', ()=>{ prefs.lock = optLock.checked; savePrefs(); applyPrefsToDOM(); });
     optBgColor.addEventListener('input', ()=>{ prefs.bg = optBgColor.value || '#000000'; savePrefs(); applyPrefsToDOM(); });
     optBgFile.addEventListener('change', ()=>{ const f=optBgFile.files && optBgFile.files[0]; if(!f) return; const r=new FileReader(); r.onload=()=>{ prefs.bgImgData=String(r.result); savePrefs(); applyPrefsToDOM(); }; r.readAsDataURL(f); });
 
@@ -357,7 +384,7 @@
     optFont.addEventListener('change', applyFontNow);
     optFont.addEventListener('keydown', (e)=>{ if(e.key==='Enter'){ e.preventDefault(); optFont.blur(); }});
 
-    // Export / Import
+    // Export / Import (native input hidden here; buttons group triggers it)
     exportBtn.addEventListener('click', ()=>{
       const data = { version:'stu-v2', exportedAt: new Date().toISOString(), items, prefs };
       const blob = new Blob([JSON.stringify(data, null, 2)], {type:'application/json'});
