--- a/index.html
+++ b/index.html
@@ -224,14 +224,40 @@
     function normalizeUrl(value){ let v=(value||'').trim(); if(!v) throw new Error('Empty URL'); if(!/^https?:\/\//i.test(v)) v='https://'+v; return new URL(v).href; }
     function domainLabelFrom(url){ const host=new URL(url).hostname.replace(/^www\./i,''); if(/\.com$/i.test(host)){ const parts=host.replace(/\.com$/i,'').split('.'); return parts[parts.length-1]; } return host.split('.')[0]; }
 
+    // —— IndexedDB helpers for images ——
+    const DB_NAME = 'stu-db';
+    const DB_VERSION = 1;
+    const IMG_STORE = 'images';
+    let dbPromise = null;
+    function openDB(){
+      if(dbPromise) return dbPromise;
+      dbPromise = new Promise((resolve, reject)=>{
+        const req = indexedDB.open(DB_NAME, DB_VERSION);
+        req.onupgradeneeded = () => {
+          const db = req.result;
+          if(!db.objectStoreNames.contains(IMG_STORE)) db.createObjectStore(IMG_STORE);
+        };
+        req.onsuccess = () => resolve(req.result);
+        req.onerror = () => reject(req.error);
+      });
+      return dbPromise;
+    }
+    async function idbPutImage(key, blob){ const db = await openDB(); return new Promise((res, rej)=>{ const tx=db.transaction(IMG_STORE,'readwrite'); tx.objectStore(IMG_STORE).put(blob, key); tx.oncomplete=()=>res(); tx.onerror=()=>rej(tx.error); }); }
+    async function idbGetImage(key){ const db = await openDB(); return new Promise((res, rej)=>{ const tx=db.transaction(IMG_STORE,'readonly'); const rq = tx.objectStore(IMG_STORE).get(key); rq.onsuccess=()=>res(rq.result||null); rq.onerror=()=>rej(rq.error); }); }
+    async function idbDeleteImage(key){ const db = await openDB(); return new Promise((res, rej)=>{ const tx=db.transaction(IMG_STORE,'readwrite'); tx.objectStore(IMG_STORE).delete(key); tx.oncomplete=()=>res(); tx.onerror=()=>rej(tx.error); }); }
+    const imageURLCache = new Map(); // key -> objectURL
+    async function getImageURLForKey(key){ if(!key) return null; if(imageURLCache.has(key)) return imageURLCache.get(key); const blob = await idbGetImage(key); if(!blob) return null; const url = URL.createObjectURL(blob); imageURLCache.set(key, url); return url; }
+    function revokeImageURL(key){ const url = imageURLCache.get(key); if(url){ URL.revokeObjectURL(url); imageURLCache.delete(key); } }
+    function dataURLToBlob(dataUrl){ try{ const [head, b64] = dataUrl.split(','); const m = /data:(.*?);base64/.exec(head); const mime = m ? m[1] : 'application/octet-stream'; const bin = atob(b64||''); const len = bin.length; const bytes = new Uint8Array(len); for(let i=0;i<len;i++) bytes[i] = bin.charCodeAt(i); return new Blob([bytes], {type:mime}); }catch{ return null; } }
+
     // —— State ——
     const STORE_KEY='stu:items:v2';
     const PREFS_KEY='stu:prefs:v2';
     /** @type {Array<{id:string,url:string,title:string,color:string,bgImg:string|null,created:number}>} */
     let items=[];
-    let prefs={ lock:false, hideTitles:false, bg:'#000000', bgImgData:null, font:'', tileMin:160, titleSize:16, radius:10 };
+    let prefs={ lock:false, hideTitles:false, bg:'#000000', bgImgData:null, bgImgKey:null, font:'', tileMin:160, titleSize:16, radius:10 };
 
-    function load(){ try{items=JSON.parse(localStorage.getItem(STORE_KEY)||'[]')}catch{items=[]} try{prefs=Object.assign(prefs, JSON.parse(localStorage.getItem(PREFS_KEY)||'{}'))}catch{} applyPrefsToDOM(); }
+    function load(){ try{items=JSON.parse(localStorage.getItem(STORE_KEY)||'[]')}catch{items=[]} try{prefs=Object.assign(prefs, JSON.parse(localStorage.getItem(PREFS_KEY)||'{}'))}catch{} }
     function save(){ localStorage.setItem(STORE_KEY, JSON.stringify(items)); }
     function savePrefs(){ localStorage.setItem(PREFS_KEY, JSON.stringify(prefs)); }
     function uid(){ return Math.random().toString(36).slice(2,10) }
@@ -242,7 +268,17 @@
     function paintTileDOM(tileEl, it){
       const bg=$('.bg',tileEl); const titleEl=$('.titleText',tileEl);
       bg.style.backgroundColor = it.color || '#111';
-      bg.style.backgroundImage = it.bgImg ? `url(${it.bgImg})` : 'none';
+      // Reset image first
+      bg.style.backgroundImage = 'none';
+      // Legacy inline data URL support
+      if(it.bgImg){ bg.style.backgroundImage = `url(${it.bgImg})`; }
+      // New IDB-backed image
+      else if(it.imgKey){
+        const key = it.imgKey;
+        // Mark current key on element to avoid race conditions
+        bg.dataset.key = key;
+        getImageURLForKey(key).then(url => { if(url && bg.dataset.key===key){ bg.style.backgroundImage = `url(${url})`; } });
+      }
       titleEl.textContent = it.title?.trim() || domainLabelFrom(it.url);
       titleEl.classList.toggle('hidden', !!prefs.hideTitles);
     }
@@ -258,7 +294,7 @@
         const removeBtn = $('[data-action="remove"]', node);
         editBtn.setAttribute('draggable','false'); removeBtn.setAttribute('draggable','false');
         editBtn.addEventListener('click', (e)=>{ e.preventDefault(); e.stopPropagation(); if(prefs.lock) return; openEditor(node, it.id); });
-        removeBtn.addEventListener('click', (e)=>{ e.preventDefault(); e.stopPropagation(); items = items.filter(x=>x.id!==it.id); save(); render(); });
+        removeBtn.addEventListener('click', async (e)=>{ e.preventDefault(); e.stopPropagation(); const key = `tile:${it.id}`; revokeImageURL(key); try{ await idbDeleteImage(key); }catch{} items = items.filter(x=>x.id!==it.id); save(); render(); });
 
         node.addEventListener('click', (e)=>{ if(node.classList.contains('interacting')) e.preventDefault(); });
 
@@ -278,9 +314,9 @@
       const edImgFile = $('.edImgFile', editor);
 
       edColor.value = it.color || '#222222';
-      edColor.addEventListener('input', ()=>{ it.color = edColor.value || it.color; it.bgImg = null; save(); paintTileDOM(tileEl, it); });
+      edColor.addEventListener('input', ()=>{ it.color = edColor.value || it.color; /* do not clear existing image; allow overlay color */ save(); paintTileDOM(tileEl, it); });
 
-      edImgFile.addEventListener('change', ()=>{ const f=edImgFile.files && edImgFile.files[0]; if(!f) return; const r=new FileReader(); r.onload=()=>{ it.bgImg = String(r.result); /* image wins */ save(); paintTileDOM(tileEl, it); }; r.readAsDataURL(f); });
+      edImgFile.addEventListener('change', async ()=>{ const f=edImgFile.files && edImgFile.files[0]; if(!f) return; const key = `tile:${id}`; revokeImageURL(key); imageURLCache.set(key, URL.createObjectURL(f)); await idbPutImage(key, f); it.imgKey = key; it.bgImg = null; save(); paintTileDOM(tileEl, it); });
 
       let closeTimer=null;
       const scheduleClose = ()=>{ clearTimeout(closeTimer); closeTimer = setTimeout(()=>{ editor.remove(); tileEl.classList.remove('interacting'); }, 1000); };
@@ -326,6 +362,24 @@
     const optFont=$('#optFont');
     const exportBtn=$('#exportBtn'); const importBtn=$('#importBtn'); const importFile=$('#importFile');
 
+    let appBgKey = null; // track to revoke
+    async function applyPrefsBg(){
+      const imgKey = prefs.bgImgKey || null;
+      const imgData = prefs.bgImgData || '';
+      // Revoke previous URL if switching
+      if(appBgKey && appBgKey!==imgKey){ revokeImageURL(appBgKey); appBgKey = null; }
+      if(imgKey){
+        appBgKey = imgKey;
+        const url = await getImageURLForKey(imgKey);
+        document.body.style.backgroundImage = url ? `url(${url})` : 'none';
+        if(url){ document.body.style.backgroundSize='cover'; document.body.style.backgroundPosition='center'; }
+        return;
+      }
+      // Legacy inline image support
+      document.body.style.backgroundImage = imgData ? `url(${imgData})` : 'none';
+      if(imgData){ document.body.style.backgroundSize='cover'; document.body.style.backgroundPosition='center'; }
+    }
+
     function applyPrefsToDOM(){
       document.documentElement.style.setProperty('--bg', prefs.bg || '#000000');
       document.documentElement.style.setProperty('--font', prefs.font || 'system-ui,-apple-system,Segoe UI,Roboto,Inter,"Helvetica Neue",Arial,sans-serif');
@@ -333,9 +387,8 @@
       document.documentElement.style.setProperty('--title-size', `${prefs.titleSize||16}px`);
       document.documentElement.style.setProperty('--radius', `${prefs.radius||10}px`);
       document.body.classList.toggle('locked', !!prefs.lock);
-      const img = prefs.bgImgData || '';
-      document.body.style.backgroundImage = img ? `url(${img})` : 'none';
-      if(img){ document.body.style.backgroundSize='cover'; document.body.style.backgroundPosition='center'; }
+      // Apply background image (async safe)
+      applyPrefsBg();
       $$('.titleText').forEach(t=> t.classList.toggle('hidden', !!prefs.hideTitles));
       render();
     }
@@ -373,7 +426,7 @@
     // General
     optLock.addEventListener('change', ()=>{ prefs.lock = optLock.checked; savePrefs(); applyPrefsToDOM(); });
     optBgColor.addEventListener('input', ()=>{ prefs.bg = optBgColor.value || '#000000'; savePrefs(); applyPrefsToDOM(); });
-    optBgFile.addEventListener('change', ()=>{ const f=optBgFile.files && optBgFile.files[0]; if(!f) return; const r=new FileReader(); r.onload=()=>{ prefs.bgImgData=String(r.result); savePrefs(); applyPrefsToDOM(); }; r.readAsDataURL(f); });
+    optBgFile.addEventListener('change', async ()=>{ const f=optBgFile.files && optBgFile.files[0]; if(!f) return; const key='prefs:bg'; revokeImageURL(key); imageURLCache.set(key, URL.createObjectURL(f)); await idbPutImage(key, f); prefs.bgImgKey = key; prefs.bgImgData = null; savePrefs(); applyPrefsToDOM(); });
 
     // Style
     optShowTitles.addEventListener('change', ()=>{ prefs.hideTitles = !optShowTitles.checked; savePrefs(); applyPrefsToDOM(); });
@@ -385,17 +438,45 @@
     optFont.addEventListener('keydown', (e)=>{ if(e.key==='Enter'){ e.preventDefault(); optFont.blur(); }});
 
     // Export / Import (native input hidden here; buttons group triggers it)
-    exportBtn.addEventListener('click', ()=>{
-      const data = { version:'stu-v2', exportedAt: new Date().toISOString(), items, prefs };
+    function blobToDataURL(blob){ return new Promise((res, rej)=>{ const r=new FileReader(); r.onload=()=>res(String(r.result)); r.onerror=()=>rej(r.error); r.readAsDataURL(blob); }); }
+    exportBtn.addEventListener('click', async ()=>{
+      const images = {};
+      // Collect tile images
+      for(const it of items){ if(it.imgKey){ try{ const b = await idbGetImage(it.imgKey); if(b){ images[it.imgKey] = await blobToDataURL(b); } }catch{} } }
+      // Collect prefs background image
+      if(prefs.bgImgKey){ try{ const b = await idbGetImage(prefs.bgImgKey); if(b){ images[prefs.bgImgKey] = await blobToDataURL(b); } }catch{} }
+      const data = { version:'stu-v2', exportedAt: new Date().toISOString(), items, prefs, images };
       const blob = new Blob([JSON.stringify(data, null, 2)], {type:'application/json'});
       const url = URL.createObjectURL(blob);
       const a = document.createElement('a'); a.href=url; a.download='stu-settings.json'; a.click(); URL.revokeObjectURL(url);
     });
     importBtn.addEventListener('click', ()=> importFile.click());
-    importFile.addEventListener('change', ()=>{ const f=importFile.files && importFile.files[0]; if(!f) return; const r=new FileReader(); r.onload=()=>{ try{ const data=JSON.parse(String(r.result)); if(!confirm('Import will replace current items and preferences. Continue?')) return; if(Array.isArray(data.items)) items=data.items; if(data.prefs && typeof data.prefs==='object') prefs=Object.assign(prefs, data.prefs); save(); savePrefs(); applyPrefsToDOM(); }catch(err){ alert('Invalid JSON file.'); } }; r.readAsText(f); });
+    importFile.addEventListener('change', ()=>{ const f=importFile.files && importFile.files[0]; if(!f) return; const r=new FileReader(); r.onload=()=>{ (async()=>{ try{ const data=JSON.parse(String(r.result)); if(!confirm('Import will replace current items and preferences. Continue?')) return; if(Array.isArray(data.items)) items=data.items; if(data.prefs && typeof data.prefs==='object') prefs=Object.assign(prefs, data.prefs);
+        // Rehydrate images from export
+        if(data.images && typeof data.images==='object'){
+          for(const [key, dataUrl] of Object.entries(data.images)){
+            const blob = dataURLToBlob(String(dataUrl)); if(blob) await idbPutImage(key, blob);
+          }
+        }
+        // Legacy fields migration after import
+        await migrateLegacyImages();
+        save(); savePrefs(); applyPrefsToDOM();
+      }catch(err){ console.error(err); alert('Invalid JSON file.'); } })(); }; r.readAsText(f); });
+
+    // —— Migration (legacy inline images to IDB) ——
+    async function migrateLegacyImages(){
+      let changed = false;
+      for(const it of items){ if(it && typeof it.bgImg==='string' && it.bgImg.startsWith('data:')){ const blob = dataURLToBlob(it.bgImg); if(blob){ const key = `tile:${it.id}`; await idbPutImage(key, blob); it.imgKey = key; it.bgImg = null; changed = true; } } }
+      if(prefs && typeof prefs.bgImgData==='string' && prefs.bgImgData.startsWith('data:')){ const blob = dataURLToBlob(prefs.bgImgData); if(blob){ const key='prefs:bg'; await idbPutImage(key, blob); prefs.bgImgKey = key; prefs.bgImgData = null; changed = true; } }
+      if(changed){ save(); savePrefs(); }
+    }
 
     // —— Init ——
-    load(); render();
+    (async function init(){
+      load();
+      await migrateLegacyImages();
+      applyPrefsToDOM();
+    })();
   </script>
 </body>
 </html>
